<resources>
    <string name="app_name">SchoolApp_V4</string>
    <string name="button">Button</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="number">Mobile Number</string>
    <string name="parent">Parent</string>
    <string name="teacher">Teacher</string>
    <string name="welcome">Welcome!!</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
